# painless-lsp

./: .editorconfig  .gitignore  .vscodeignore  Cargo.toml  Makefile  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/actions/update-cargo-toml-version/: action.yml
.github/actions/update-package-json-version/: action.yml
.github/actions/validation-version-foramt/: action.yml
.github/workflows/: build-client.yml  build-server.yml  build-vsix.yml  release.yml  rust_test.yml  validate-version-format.yml
assets/: painless_grammar.pest
assets/antlr/: PainlessParser.g4
assets/test_data/: easy_sample.painless  for.painless  sample.painless
client/: package.json  pnpm-lock.yaml
client/src/: extension.ts
src/: antlr_semantic_tree.rs  antlr_token_mapping.rs  lsp_token.rs  main.rs  pest_semantic_tree.rs  pest_token_mapping.rs  semantic_tree_type.rs  server.rs  utils.rs
src/antlr/: mod.rs  type_converter.rs
